// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Milestones multiple milestones 1`] = `
<p>
  <strong>
    Milestones: 
  </strong>
  <span
    key="0"
  >
    <i>
      <a
        href="url"
      >
        Milestone 1
      </a>
    </i>
     (open: 
    1
    )
  </span>
  <span
    key="1"
  >
     | 
    <i>
      <a
        href="url2"
      >
        Milestone 2
      </a>
    </i>
     (open: 
    1
    )
  </span>
</p>
`;

exports[`Milestones with due date 1`] = `
<p>
  <strong>
    Milestones: 
  </strong>
  <span
    key="0"
  >
    <i>
      <a
        href="url"
      >
        Milestone 1
      </a>
    </i>
     (open: 
    1
    , due: due date
    )
  </span>
</p>
`;

exports[`Milestones without due date 1`] = `
<p>
  <strong>
    Milestones: 
  </strong>
  <span
    key="0"
  >
    <i>
      <a
        href="url"
      >
        Milestone 1
      </a>
    </i>
     (open: 
    1
    )
  </span>
</p>
`;
